[gd_scene load_steps=13 format=3 uid="uid://cw4xxsw0xqqx8"]

[ext_resource type="Script" uid="uid://fyqffq1yul03" path="res://scripts/coral.gd" id="1_6v37m"]
[ext_resource type="Texture2D" uid="uid://c2sj56drg3g4o" path="res://assets/fx/CoralTransparent.png" id="2_dplbp"]
[ext_resource type="AudioStream" uid="uid://4cp7v14w4dw4" path="res://assets/audio/mantiscrab_coralbreak.ogg" id="2_kjyw7"]
[ext_resource type="ArrayMesh" uid="uid://b6jlvn3k6nsyr" path="res://assets/models/LevelComponents/evil coral.obj" id="2_u0rcf"]
[ext_resource type="Material" uid="uid://16cfr54byyqu" path="res://assets/materials/evilcoral.tres" id="3_kh6w5"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_b0qxb"]

[sub_resource type="SphereShape3D" id="SphereShape3D_mpdla"]
radius = 1.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kcsr2"]
transparency = 1
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("2_dplbp")
billboard_mode = 1
billboard_keep_scale = true

[sub_resource type="Curve" id="Curve_gbper"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.802508, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_o2q3m"]
curve = SubResource("Curve_gbper")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6slne"]
emission_shape = 1
emission_sphere_radius = 1.0
angle_min = 1.07288e-05
angle_max = 360.0
direction = Vector3(1, 1, 0)
spread = 90.0
initial_velocity_min = 2.0
initial_velocity_max = 4.0
gravity = Vector3(0, -4, 0)
scale_min = 0.1
scale_max = 0.5
color = Color(0.387861, 0.00103616, 0.563088, 1)
alpha_curve = SubResource("CurveTexture_o2q3m")
hue_variation_min = 0.06
hue_variation_max = 0.06

[sub_resource type="QuadMesh" id="QuadMesh_obv78"]

[node name="Coral" type="Node3D"]
script = ExtResource("1_6v37m")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("CylinderShape3D_b0qxb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.145, 0, 0, 0, 0.145, 0, 0, 0, 0.145, 0, -1.56162, -0.134438)
mesh = ExtResource("2_u0rcf")
surface_material_override/0 = ExtResource("3_kh6w5")

[node name="Snap_Area3D" type="Area3D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Snap_Area3D"]
shape = SubResource("SphereShape3D_mpdla")

[node name="CrunchSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_kjyw7")
bus = &"SFX"

[node name="Node3D" type="Node3D" parent="."]

[node name="GPUParticles3D" type="GPUParticles3D" parent="Node3D"]
unique_name_in_owner = true
material_override = SubResource("StandardMaterial3D_kcsr2")
emitting = false
amount = 12
lifetime = 2.0
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_6slne")
draw_pass_1 = SubResource("QuadMesh_obv78")

[connection signal="area_entered" from="Snap_Area3D" to="." method="_on_snap_area_3d_area_entered"]
[connection signal="area_exited" from="Snap_Area3D" to="." method="_on_snap_area_3d_area_exited"]
[connection signal="body_entered" from="Snap_Area3D" to="." method="_on_area_3d_body_entered"]
